# GL-compute

./: .gitignore  CMakeLists.txt  GL-compute.code-workspace  README.md
src/: CMakeLists.txt  FrameBuffer.hpp  GL.hpp  Quad.hpp  Shader.hpp  ShaderCompute.hpp  Texture.hpp  main.cpp
